<resources>
    <string name="app_name">Weather</string>
    <string name="next_24_hours">Next 24 hours</string>
    <string name="next_7_days">Next 7 days</string>
    <string name="additional_info">Additional Info</string>
    <string name="real_feel">Real feel</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="uv_index">UV Index</string>
    <string name="location_required_dialog_message">Weather needs your location in order to provide you the required functionality. Please, grant the permission from your settings</string>
    <string name="location_is_unavailable_dialog_message">Location services are disabled on this device. Please, enable them and try again</string>
    <string name="ok">OK</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="search_for_a_city">Search for a city or a country</string>
    <string name="your_location">Your Location</string>
    <string name="establishing_your_location_please_wait">establishing your location, please wait</string>
    <string name="forecast_day_and_desc">%1$s \u0387 %2$s</string>
    <string name="day_night_temperature">%1$d\u00b0/%2$d\u00b0</string>
    <string name="middle_dot">\u0387</string>
    <string name="degrees_celsius">\u00b0C</string>
    <string name="temp_degrees_celsius">%1$.2f \u00b0C</string>
    <string name="pressure_h_pa">%1$d hPa</string>
    <string name="humidity_percent">%1$d %%</string>
    <string name="wind_speed">%1$.2f m/s</string>
    <string name="time_now_in_x_location">Now in %1$s</string>
    <string name="view_seven_day_forecast">View seven day forecast</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="unsuccessful_response_error_message">An error occurred while loading your data. Please, check network connection and try again. Swipe down to refresh.</string>
    <string name="morn">morn.</string>
    <string name="day">day</string>
    <string name="even">even.</string>
    <string name="night">night</string>
    <string name="sunrise_at">sunrise at  \u0387  %1$s</string>
    <string name="manage_locations">Manage Locations</string>
    <string name="add_location_to_saved_locations">add_location_to_saved_locations</string>
    <string name="select_location_error_message">Something went wrong</string>
    <string name="try_again">Try Again</string>
    <string name="choose_on_map">Choose on Map</string>
    <string name="on_place_error_message">Could not find location. Please try again</string>
    <string name="on_locate_error_message">Could not determine your location. Please try again</string>
    <string name="on_cities_load_error_message">Could not load cities, Please try again</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
</resources>