<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="?attr/colorMainBlueBg"
    tools:context="com.watermelonman.weather.ui.fragment.selectlocation.view.SelectLocationFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtSearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_22"
        android:layout_marginStart="@dimen/dp_22"
        android:layout_marginEnd="@dimen/dp_22"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/SearchBarStyle"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/search_for_a_city"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="?colorMainBlueSecondary"
        android:layout_marginTop="@dimen/dp_12"
        tools:background="@color/color_sky_blue_secondary"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lRequestingLocationProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="@dimen/dp_22"
        android:layout_marginEnd="@dimen/dp_22"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtSearchBar"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_4"
            android:indeterminateDrawable="@drawable/progress_bar_green"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:fontFamily="@font/cabin"
            android:textColor="@color/color_warm_yellow"
            android:text="@string/establishing_your_location_please_wait"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYourLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_6"
            android:text="@string/your_location"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:iconTint="?colorText"
            app:rippleColor="@color/color_white_20"
            android:textColor="?colorText"
            app:icon="@drawable/ic_round_my_location_24"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChooseOnMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/choose_on_map"
            android:textColor="@color/color_warm_yellow"
            app:icon="@drawable/ic_round_map_24"
            app:iconTint="@color/color_warm_yellow"
            app:rippleColor="@color/color_white_20"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/dp_22"
        android:layout_marginEnd="@dimen/dp_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lRequestingLocationProgressBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            tools:listitem="@layout/rv_item_location"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgToTop"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="end|top"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_circle_light_secondary_with_ripple"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_round_arrow_up_24"
            app:tint="@color/color_light_grey"
            tools:visibility="visible"
            />
    </FrameLayout>


</androidx.appcompat.widget.LinearLayoutCompat>